# LearnOpenGL

./: .gitignore  CMakeLists.txt  main
include/: camera.h  shader.h  texture.h
include/glad/: glad.h
rsrc/: frag.glsl  vert.glsl
src/: camera.cpp  glad.c  main.cpp  shader.cpp  texture.cpp
